# wheel-of-words

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pnpm-lock.yaml
.atl/: skill-registry.md
apps/api/: README.md  pyproject.toml
apps/api/src/wheel_vocabulary/: __init__.py
apps/api/src/wheel_vocabulary/api/: __init__.py  dependencies.py  main.py
apps/api/src/wheel_vocabulary/api/dtos/: __init__.py  health.py
apps/api/src/wheel_vocabulary/api/routes/: __init__.py  health.py
apps/api/src/wheel_vocabulary/api/schemas/: __init__.py  health.v1.json
apps/api/src/wheel_vocabulary/application/: __init__.py  clock.py
apps/api/src/wheel_vocabulary/domain/: __init__.py
apps/api/src/wheel_vocabulary/infrastructure/: __init__.py  clock.py  settings.py  version.py
apps/api/src/wheel_vocabulary/infrastructure/persistence/: __init__.py
apps/api/tests/: conftest.py
apps/api/tests/api/: test_health.py
apps/api/tests/smoke/: test_smoke.py
apps/api/tests/unit/: test_clock.py  test_health_dto.py  test_settings.py  test_version.py
apps/web/: .eslintrc.cjs  README.md  index.html  package.json  tsconfig.json  vitest.config.ts
docs/: constitution.md  decisions-log.md  definition-of-done.md  glossary.md  product-vision.md  traceability-matrix.md
docs/adr/: 0001-monorepo-and-stack.md  0002-hexagonal-split.md  0003-tdd-mandatory.md  0004-sdd-openspec.md  0005-local-first.md  0006-pos-per-occurrence.md  0007-manual-corrections-precedence.md  0008-multi-language-scope.md  0009-mwe-language-specific-instances.md  0010-documentation-language-policy.md  README.md  _template.md
docs/architecture/: architecture-baseline.md  (+1 more)
openspec/: config.yaml
templates/: feature-spec-template.md
(+25 files in other folders)
