[project]
name = "wheel-vocabulary"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "jsonschema>=4.22",
]

[project.optional-dependencies]
dev  = ["wheel-vocabulary[test,lint,type]"]
test = ["pytest>=8", "pytest-cov>=5", "httpx>=0.27", "hypothesis>=6"]
lint = ["ruff>=0.4"]
type = ["mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wheel_vocabulary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--strict-markers -ra"
markers   = [
    "unit: pure unit test (no database, no network)",
    "integration: test with SQLite or Alembic",
    "e2e: Playwright end-to-end test",
    "smoke: infrastructure smoke test",
]

[tool.coverage.run]
source   = ["wheel_vocabulary"]
branch   = true

[tool.coverage.report]
show_missing = true
skip_empty   = true

[tool.ruff]
target-version = "py312"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "A", "C4", "PT", "SIM", "RET", "TCH", "TID"]

[tool.ruff.lint.isort]
known-first-party = ["wheel_vocabulary"]

[tool.ruff.lint.per-file-ignores]
# S101: use of assert is expected in pytest test files.
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version      = "3.12"
strict              = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "wheel_vocabulary.domain.*"
strict = true

[[tool.mypy.overrides]]
module = "wheel_vocabulary.application.*"
strict = true
